# mgen3d

./: .dockerignore  .gitignore  Dockerfile  README.md  pyproject.toml
.github/: pull_request_template.md
.github/workflows/: lint.yml
config/: default.yaml  default_vanilla.yaml  depth.yaml  diffusion.yaml
scripts/: build_docker.bash  diffuse_test_image.bash  download_nerf_test_data.bash  run_docker.bash  train_nerf.bash
src/mgen3d/: depth.py  diffusion.py  mask.py  metrics.py  pose_generator_utils.py
src/mgen3d/config/: depth.yaml
src/mgen3d/data/: data_utils.py  nerf_dataset.py  sampling_dataset.py
src/mgen3d/nerf/: nerf.py  networks.py  ray_utils.py  utils.py
src/mgen3d/pipelines/: gen3d_pipeline.py  model_gen_pipeline.py  nerf_pipeline.py
test/: test_mask.py  test_nerf.py  test_nerf_dataset.py  test_pipeline.py  test_pose_generator_utils.py  test_ray_utils.py
